--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 
                     <p><b>Programming Languages & Frameworks: </b>
                         Core Java, SQL, Python, HTML, CSS, Servlet, JDBC, Hibernate, Spring Frameworks, Restful api, Lombok</p>
-                    <p><b>Tools:</b>
+                    <p><b>Software Development Tools:</b>
                         VS Code, MySQL, Eclipse IDE, Git, GitHub, IntelliJ IDEA</p>
                     <p><b>Methodologies:</b>
                         Agile Development, Object-Oriented Programming, Software Development Life Cycle (SDLC)</p>
