--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
                 <h2 class="skills_title">Skills</h2>
                 <br>
                 
-                    <p><b>Programming Languages & Frameworks: </b>
-                        Core Java, SQL, Python, HTML, CSS, Servlet, JDBC, Hibernate, Spring Frameworks, Restful api, Lombok</p>
-                    <p><b>Software Development Tools:</b>
-                        VS Code, MySQL, Eclipse IDE, Git, GitHub, IntelliJ IDEA</p>
+                    <p><b>Programming Languages:</b>
+                        Core Java, SQL, Python, HTML, CSS, Servlet, JDBC, Hibernate, Spring Framework, Restful Api</p>
+                    <p><b>Developer & Testing Tools</b>
+                        Selenium, MySQL, Eclipse IDE, VS Code, GitHub, Git, IntelliJ IDEA, Postman, TestNG</p>
                     <p><b>Methodologies:</b>
-                        Agile Development, Object-Oriented Programming, Software Development Life Cycle (SDLC)</p>
+                        Agile Development, Object-Oriented Programming, Software Development Life Cycle(SDLC)</p>
                     <p><b>Soft Skills:</b>
                         Problem-solving, Analytical Thinking, Team Collaboration, Time Management</p>
                 
